--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -120,8 +120,7 @@ header a,footer a:hover{
 }
 
 footer{
-  padding: 20px;
-  padding-bottom: 150px;
+  padding: 20px 20px 150px;
   background-color: #001f3f;
   text-align: center;
 }
@@ -249,9 +248,8 @@ table {
 
 th, td {
   text-align: left;
-  border: none;
   padding: 2px 10px 2px 10px;
-  border-width: 2pt;
+  border: 2pt none;
 }
 
 tr:nth-child(even) {
@@ -273,7 +271,7 @@ tr:nth-child(even) {
 .col p{
   display: inline;
   padding-left: 20px;
-  padding-top: 0px;
+  padding-top: 0;
 }
 
 /***********************imagemap***********************************/
@@ -291,7 +289,6 @@ tr:nth-child(even) {
 
 
 #imgmap{
-  margin-top: 100px;
   max-width: 100%;
   float: left;
   margin: 0;
