--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -17,6 +17,19 @@ body{
   width: 80%;
   margin: auto;
   overflow: hidden;
+  font-size: 40px;
+}
+
+
+.svg-container{
+  width: 80%;
+  heigh: 80%;
+}
+
+.svg{
+  width:100%;
+  height:100%;
+
 }
 
 ul{
@@ -371,6 +384,27 @@ div.video {
 /*Rss feed*/
 #feed a{
   text-decoration: none;
+
+}
+
+
+#d3-container{
+    width: 80%;
+    height: 80%;
+
+    border: solid  #001f3f;
+
+}
+
+#d3-container svg{
+    height: 100%;
+    width: 100%;
+
+}
+
+#svg{
+    height: 100%;
+    width: 100%;
 
 }
 
