--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -200,8 +200,8 @@ footer #info{
     min-height: 200px;
     background:url('../images/banner.jpg') no-repeat -200px -200px;
     text-align: center;
-    color: #001f3f;
-    opacity: 0.5;
+    color: #000;
+    opacity: 0.7;
 }
 
 #banner h1{
