--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -178,7 +178,7 @@ footer #info{
     width: 100%;
     padding: 10px;
     float: left;
-    color: #DDDDDD;
+    color: #FFFFFF;
 }
 
 /**************************local***********************************/
